<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#646464"
    tools:context="com.platformhouse.lifepage.ui.activities.NewNoteActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:paddingBottom="48dp">
                <EditText
                    android:id="@+id/new_note_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_note_title"
                    android:textColor="#fff"
                    android:inputType="textCapSentences"
                    android:textSize="28sp"
                    android:background="@android:color/transparent"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#747474"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
                <ImageView
                    android:id="@+id/new_note_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/insert_image_note" />
                <EditText
                    android:id="@+id/new_note_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_note_content"
                    android:paddingTop="8dp"
                    android:textColor="#fff"
                    android:fontFamily="serif"
                    android:textSize="20sp"
                    android:background="@android:color/transparent"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#747474"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:id="@+id/time_picker"
                    android:weightSum="3"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:textColor="#fff"
                        android:paddingBottom="16dp"
                        android:textSize="18sp"
                        android:text="@string/pick_time"/>
                    <TextView
                        android:id="@+id/display_time"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:textColor="#fff"
                        android:textAlignment="textEnd"
                        android:paddingBottom="16dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textSize="14sp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#747474"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
                <LinearLayout
                    android:id="@+id/date_picker"
                    android:weightSum="3"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:textColor="#fff"
                        android:paddingBottom="16dp"
                        android:textSize="18sp"
                        android:text="@string/pick_date"/>
                    <TextView
                        android:id="@+id/display_date"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:textColor="#fff"
                        android:textAlignment="textEnd"
                        android:paddingBottom="16dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textSize="14sp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#747474"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
                <LinearLayout
                    android:id="@+id/ringTone"
                    android:weightSum="3"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="32dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:textColor="#fff"
                        android:paddingBottom="16dp"
                        android:textSize="18sp"
                        android:text="@string/ring_tone"/>
                    <TextView
                        android:id="@+id/display_ringTitle"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:textColor="#fff"
                        android:textAlignment="textEnd"
                        android:paddingBottom="16dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textSize="14sp"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="#282828"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            android:id="@+id/cancel_button"
            android:textColor="#fff"
            android:fontFamily="serif"
            android:background="@drawable/option_button" />
        <View
            android:layout_weight="0"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#464646"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/save_button"
            android:id="@+id/save_button"
            android:textColor="#fff"
            android:fontFamily="serif"
            android:background="@drawable/option_button"/>
    </LinearLayout>

</RelativeLayout>
