<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_border">
        <ImageView
            android:id="@+id/note_image"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/note_image" />
        <TextView
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#f9236c"
            android:textSize="20sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"/>
            <TextView
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="16sp"
                android:fontFamily="serif"
                android:layout_marginTop="16dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:weightSum="3"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/alarm_clock"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/clock_logo" />
                <TextView
                    android:id="@+id/time"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:paddingLeft="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/alarm_calender"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/calender_logo" />
                <TextView
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textColor="#fff"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>